# GPT-CookBot

./: LICENSE  README.md  cook_bot.py  license.txt  pyproject.toml  requirements.txt
